templates/singulinkfx/styles/singulink.css
/* ... */
.toc .nav>li.active>.expand-stub::before,.toc .nav>li>.expand-stub::before {
    content: " ";
    position: absolute;
    transform: rotate(-90deg);
    background-repeat: no-repeat;
    background: url(down-arrow.svg)
}

.toc .nav>li.active>.expand-stub::before,.toc .nav>li.filtered>.expand-stub::before,.toc .nav>li.in.active>.expand-stub::before,.toc .nav>li.in>.expand-stub::before {
    transform: none
}

li,li.in>ul {
    display: block
}

ul.level2>li>a.sidebar-item {
    font-size: .95em;
    padding: 0
}

ul.level3>li>a.sidebar-item {
    padding: 0
}

ul.level2>li>a.sidebar-item:focus,ul.level2>li>a.sidebar-item:hover,ul.level3>li>a.sidebar-item:focus,ul.level3>li>a.sidebar-item:hover {
    color: var(--link-active-color);
    text-decoration: underline
}

ul.level2>li>a.sidebar-item.active,ul.level3>li>a.sidebar-item.active {
    color: var(--link-active-color)
}

.inheritance div {
    display: inline-block;
}

.inheritance div:not(:last-child):after {
    content: " → ";
}

body {
    font-size: var(--base-font-size)
}

@media (max-width:1024px) {
    body {
        font-size: var(--smalldevice-base-font-size)
    }
}

h1,h2,h3,h4,h5 {
    line-height: initial
}

h1,h1:first-child {
    font-size: 2.25em;
    letter-spacing: .5px;
    color: var(--h1-color);
    margin-block-start: 1em;
    margin-block-end: -.05em
}

.article h1 {
    margin-block-end: -.2em
}

h2 {
    font-size: 2.1em;
    color: var(--h2-color)
}

.article h2 {
    margin-block-start: 1.3em;
    padding-bottom: 6px;
    border-bottom: 1px solid var(--separator-color)
}

.article h3,h3 {
    font-size: 1.95em;
    font-weight: 500;
    margin-block-start: 1.7em
}

.article h3 {
    font-size: 1.85em;
    margin-block-start: 1.2em;
    margin-block-end: .9em
}

h4 {
    font-size: 1.8em;
    font-weight: 400;
    margin-block-start: 2em;
    padding-bottom: 10px
}

.article h4 {
    font-size: 1.5em;
    font-weight: 300;
    margin-block-start: 1em;
    margin-block-end: 1em;
    padding-bottom: 0;
    border-bottom: none
}

h5 {
    font-size: 1.1em
}

.article h5 {
    font-size: 1.13em;
    font-weight: 400;
    text-decoration: underline;
    margin-block-start: 1.5em;
    margin-block-end: 1em
}

a.brand:hover {
    text-decoration: none
}

a.brand .brand-title {
    font-size: 1.4em;
    font-weight: 500;
    letter-spacing: .5px;
    color: var(--appname-color);
    margin-top: 1px;
    padding: 0 0 0 .4em
}

@media (min-width:1024px) {
    a.brand .brand-title {
        font-size: 1.55em
    }
}

a.brand .logomark {
    height: 35px
}

.top-navbar {
    height: 60px;
    padding: 0 0 0 10px
}

.burger-icon {
    margin-right: 10px
}

.sidebar {
    padding: 25px 17px 32px
}

.blackout {
    top: 60px
}

@media (max-width:1023.98px) {
    .navbar-nav {
        margin-top: 0
    }
}

nav {
    width: 94%;
    max-width: var(--sidebar-width);
    left: calc(var(--sidebar-width)*-1)
}

@media (max-width:1023.98px) {
    nav {
        top: 60px
    }
}

nav ul {
    list-style-type: none
}

nav .nav a,nav .nav a:hover {
    text-decoration: none;
    cursor: pointer;
    display: block
}

nav a.sidebar-item {
    padding: 4px 0 4px 10px;
    cursor: pointer
}

.footer a:focus,.footer a:hover,nav a.sidebar-item:focus,nav a.sidebar-item:hover,nav a:focus {
    text-decoration: underline
}

nav a,nav a:focus,nav a:hover {
    color: var(--sidebar-item-color)!important
}

nav a.active,nav a.active:focus,nav a.active:hover {
    color: var(--sidebar-active-item-color)!important
}

.sidebar-item-separator {
    margin: 20px 0
}

#toc ul li a {
    padding: 0 0 0 10px
}

.search {
    background: var(--search-bg-color);
    border: 1px solid var(--search-border-color);
    border-radius: 5px;
    position: relative;
    margin-block-start: 25px
}

@media (max-width:1023.98px) {
    .search {
        margin-block-start: 0;
        margin-block-end: 15px
    }
}

.search>input {
    font-size: .95em;
    color: var(--search-color);
    border: 0;
    background: 0 0;
    padding: 11px 30px 10px 37px;
    width: 100%
}

.search>input:focus,.toc-filter>input:focus {
    outline: 0
}

.search>.search-icon,.toc-filter>.filter-icon {
    font-size: 1.2em;
    color: var(--search-searchicon-color);
    position: absolute;
    top: 9px;
    left: 9px
}

.toc-filter {
    background: var(--toc-filter-bg-color);
    border: 1px solid var(--toc-filter-border-color);
    border-radius: 5px;
    position: relative
}

.toc-filter>input {
    font-size: .95em;
    color: var(--toc-filter-color);
    border: 0;
    background: 0 0;
    padding: 11px 30px 10px 37px;
    width: 100%
}

.toc-filter>.filter-icon {
    color: var(--toc-filter-filtericon-color)
}

.toc-filter>.clear-icon {
    color: var(--toc-filter-clearicon-color);
    position: absolute;
    top: 9px;
    right: 9px;
    cursor: pointer
}

.toc .nav>li.active>.expand-stub::before,.toc .nav>li>.expand-stub::before {
    width: 8px;
    height: 8px;
    top: 6px;
    left: 6px
}

#toc ul.level2 {
    margin-bottom: 20px
}

#toc ul.level1>li>a {
    font-weight: 500;
    margin-bottom: 10px;
    padding: 5px 10px
}

#toc ul.level1>li>a,#toc ul.level1>li>a.active {
    background-color: var(--sidebar-level1-item-bg-color)!important;
    border-radius: 2px
}

#toc ul.level1>li>a.active:focus,#toc ul.level1>li>a.active:hover,#toc ul.level1>li>a:focus,#toc ul.level1>li>a:hover {
    background-color: var(--sidebar-level1-item-hover-bg-color)!important;
    text-decoration: none
}

ul.level2 {
    padding-inline-start: .7em
}

ul.level2 .expand-stub {
    top: 1px
}

ul.level2>li>a,ul.level2>li>a.sidebar-item {
    font-weight: 400;
    color: var(--sidebar-item-color);
    margin: 4px 0
}

ul.level3 {
    padding-inline-start: 1em
}

ul.level3>li>a,ul.level3>li>a.sidebar-item,ul.level4>li>a,ul.level4>li>a.sidebar-item {
    font-size: 1.05em;
    color: var(--sidebar-item-color);
    margin: 4px 0
}

ul.level4 {
    padding-inline-start: 0;
    margin-bottom: 12px
}
/* ... */

